# Medium-Mining

./: .gitattributes  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
analyze/: 01_descriptive.ipynb  02_create_embeddings.ipynb  03_topic_modeling.py  04_ai_detection.ipynb  05_grammar_analysis.ipynb  language_tool_rule_ids_en.txt
analyze/embeddings/: embeddings_free.pt  embeddings_paid.pt
analyze/tensorboard_logs/: embeddings.ckpt-1.data-00000-of-00001  embeddings.ckpt-1.index
architecture/database-schema/: index.html
architecture/overview/: index.html
architecture/project-structure/: index.html
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md
docs/architecture/: database-schema.md  overview.md  project-structure.md
docs/assets/: .gitkeep
docs/data-analysis/: overview.md
docs/faq/: common-issues.md  faq.md
docs/getting-started/: installation.md  quick-start.md
docs/modules/: database.md  scraper.md
docs/modules/database/: overview.md
docs/modules/scraper/: article-scraper.md  overview.md
faq/faq/: index.html
getting-started/: index.html
modules/database/: index.html
modules/scraper/: index.html
modules/scraper/overview/: index.html
notebooks/: analyze.ipynb  topic_modeling.ipynb
report/: main.tex  preamble.tex  references.bib  report.tex
report/sections/: 00_Abstract.tex  01_Data_Aquisition.tex  02_Data_Analysis.tex  03_Topic_Modeling.tex  04_AI_Content.tex  05_Grammar_Analysis.tex  06_Conclusion.tex
report/sections/appendix/: Table_Topic_Cluster_T_Test.tex  language_tool_error_types.tex
site/faq/common-issues/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/modules/database/overview/: index.html
site/modules/scraper/article-scraper/: index.html
site/search/: search_index.json
src/analyze/: datascience.ipynb
src/database/: database.py  recreate_db.py  transfer_data.py
src/scraper/: __main__.py  log_utils.py  medium_helpers.py  playwright_helpers.py  playwright_test.py  scrape_articles.py  scrape_sitemaps.py
