[tool.poetry]
name = "medium-mining"
version = "0.1.0"
description = ""
authors = ["Moritz Enderle <contact@moritzenderle.com>"]
readme = "README.md"
packages = [
    { include = "scraper", from = "src" },
    { include = "database", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.39"
requests = "^2.32.3"
seaborn = "^0.13.2"
pandas = "^2.2.3"
scipy = "^1.15.2"
duckdb = "^1.2.1"
duckdb-engine = "^0.15.0"
black = "^25.1.0"
isort = "^6.0.1"
aiosqlite = "^0.21.0"
aiohttp = "^3.11.14"
playwright = "^1.51.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.15"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docs-serve = "mkdocs:serve"
docs-build = "mkdocs:build"
