[tool.poetry]
name = "medium-mining"
version = "0.1.0"
description = ""
authors = ["Moritz Enderle <contact@moritzenderle.com>"]
readme = "README.md"
packages = [
    { include = "scraper", from = "src" },
    { include = "database", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12 <3.13"
sqlalchemy = "^2.0.40"
requests = "^2.32.3"
seaborn = "^0.13.2"
pandas = "^2.2.3"
scipy = "^1.15.2"
duckdb = "^1.2.1"
duckdb-engine = "^0.15.0"
black = "^25.1.0"
isort = "^6.0.1"
aiosqlite = "^0.21.0"
aiohttp = "^3.11.14"
playwright = "^1.51.0"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
pytest = "^8.3.5"
sentry-sdk = "^2.25.1"
wandb = "^0.19.9"
html-to-markdown = "^1.3.2"
rich = "^13.7.1"
plotly = "^6.3.1"
tensorboard = "^2.20.0"
tensorflow = "^2.20.0"
google-generativeai = "^0.8.5"
python-dotenv = "^1.1.1"
xgboost = "^3.0.5"
adjusttext = "^1.3.0"
graphviz = "^0.21"
dtreeviz = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
